--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -52,13 +52,18 @@
 \def\floatpagefraction{.9}
 
 
+\DontPrintSemicolon
+\SetKw{CAS}{CAS}
+\SetKw{True}{true}
+\SetKw{False}{false}
+\SetKw{Int}{int}
+
 
 \begin{document}
 
-%	\input{example}
-	\newpage
-%	\input{BST}
-	\input{BST-robust}
+	\input{linked-list}
+%	\input{elimination-stack}
+%	\input{BST-robust}
 	
 
 \end{document}
